      now modify voxel values in place for improved performance.
    - Add CMake support for linking against Jemalloc and TBB malloc and enable
      Jemalloc by default for Linux and non-Maya, otherwise use TBB malloc.
    - Added math::isInfinite() and math::isNan() to resolve Visual Studio
      compatibility issues with integer types.

    Bug fixes:
    - Fixed a bug in tools::computeScalarPotential() that could produce
      a corrupt result due to invalid memory access.
      [Reported by Edwin Braun]

    ABI changes:
    - ABI versions 3 and older are now deprecated, and support for them will be
      removed in a future release. Until then, define the macro
      OPENVDB_USE_DEPRECATED_ABI (or set the CMake OPENVDB_USE_DEPRECATED_ABI
      option to ON) to suppress deprecation messages when compiling OpenVDB or
      dependent code.

    Python:
    - CMake now always produces a .so for the Python module on UNIX platforms.
    - Fixed a compile-time error when building the Python module for Python 3.
      [Reported by yurivict]

    Houdini:
    - Added openvdb_houdini::GEOvdbApply(), which invokes a functor
      on a VDB primitive if the resolved grid type is a member of
      a given type list.
    - Fixed a regression in the Fill SOP that caused it to modify VDBs
      in the input detail.
    - The Combine SOP no longer crashes in Copy B mode when the destination
      is not a VDB.
    - Added a houdini_utils::OpFactory::setInvisible() method to hide nodes
      from tab menus.
    - Added methods to store parent name and visibility of native SOPs to
      @b openvdb_houdini::OpenVDBOpFactory.


Version 6.1.0 - May 8, 2019

      As of this release, the oldest supported Houdini version is 16.5.

    New features:
    - Added new QuatTraits, MatTraits and ValueTraits type traits to complement
      VecTraits and added an IsSpecializationOf helper metafunction.
    - Added support for Vec4s, Vec4d and Vec4i metadata.