@@ -14,6 +14,7 @@ Version 6.1.1 - In development
       Jemalloc by default for Linux and non-Maya, otherwise use TBB malloc.
     - Added math::isInfinite() and math::isNan() to resolve Visual Studio
       compatibility issues with integer types.
+    - Minor performance improvements to moving and filtering VDB points.
 
     Bug fixes:
     - Fixed a bug in tools::computeScalarPotential() that could produce
